[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "310-l6-soft-happiness-and-work-data-starter-1"
version = "0.1.0"
[tool.poetry.dependencies]
pandas = "^1.0"
python = "^3.7"
seaborn = "^0.10.0"
[tool.poetry.dev-dependencies]
